@@ -1,10 +1,23 @@
-= Installing the Gem
+= Installing HighLine
+
+RubyGems is the preferred easy install method for HighLine.  However, you can
+install HighLine manually as described below.
+
+== Installing the Gem
 
 HighLine is intended to be installed via the
 RubyGems[http://rubyforge.org/projects/rubygems/] system.  To get the latest
 version, simply enter the following into your command prompt:
 
-	sudo gem install highline
+	$ sudo gem install highline
 
 You must have RubyGems[http://rubyforge.org/projects/rubygems/] installed for
 the above to work.
+
+== Installing Manually
+
+Download the latest version of HighLine from the
+{RubyForge project page}[http://rubyforge.org/frs/?group_id=683].  Navigate to
+the root project directory and enter:
+
+	$ sudo ruby setup.rb
