@@ -3,10 +3,9 @@
 The following is a list of planned expansions for HighLine, in no particular
 order.
 
-* Support character oriented input.
 * Support <tt>ask(..., Array)</tt>, better than the current
   <tt>ask(..., lambda { |arr| arr.split(",") })</tt> or similar.
 * Support <tt>ask(..., Hash)</tt>.
-* Provide for <tt>ask(..., MyClass)</tt>.
 * Add word wrap support to say().
 * Implement choose() for simple menu handling.
+* Provide a +no_echo+ option.
